# all_solutions

./: README.md
course_1/coursework/: main.py
course_1/lesson_2/: main.py  solution
course_1/lesson_3/: main.py
course_1/lesson_3/solution/: main.py
course_1/lesson_4/: main.py
course_1/lesson_5/: README.md
course_2/coursework/: main.py  utils.py
course_2/coursework/classes/: player.py
course_2/lesson_6/: functions.py  history.txt  main.py  words.txt
course_2/lesson_7/: config.py  main.py  professions.json  utils.py
course_2/result_coursework/: main.py  utils.py
course_3/coursework/: README.md  requirements.txt
course_3/result_coursework/: config.py  run.py
course_4/result_coursework/: create_tables.py  load_fixtures.py  project.db  requirements.txt  run.py
course_5/coursework/: README.md  base.py  classes.py  skills.py  unit.py
course_5/lesson_21/: README.md
course_5/lesson_25/: README.md
course_5/result_coursework/: app.py  equipment.py
course_6/lesson_27/: pyproject.toml
course_6/lesson_27/ads/: models.py  views.py
course_6/lesson_27/avito/: settings.py  urls.py
course_6/lesson_28/: pyproject.toml
course_6/lesson_28/ads/: admin.py  models.py  urls.py  views.py
course_6/lesson_28/avito/: asgi.py  settings.py  urls.py
course_6/lesson_28/users/: models.py  urls.py  views.py
course_6/lesson_28/users/migrations/: 0001_initial.py
course_6/lesson_29/: pyproject.toml
course_6/lesson_30/: pyproject.toml
course_6/lesson_31/: pyproject.toml  pytest.ini
course_6/lesson_32/: README.md
course_6/result_coursework/: README.md
(+250 files in other folders)
